--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NA MU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NA MU.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -15,16 +19,16 @@
     </script>
   </head>
   <body>
-    <header class="header">
+    <header class="header header--desktop">
       <div class="container">
 
-        <div class="header__menu">
-          <a href="#menu" class="header__menu---opener">
+        <div class="header__content">
+          <a href="#menu" class="header__opener">
             <img
               src="./images/Vector.png"
-              alt="header__menu-opener">
+              alt="header__opener">
           </a>
-          <div class="header__menu--logo">
+          <div class="header__logo">
             <a href="#">
               <img src="./images/NA MU.png" alt="logo">
             </a>
@@ -36,170 +40,35 @@
     </header>
 
     <nav class="menu" id="menu">
-      <div class="menu__header">
-        <div class="menu__logo menu__header-logo">
-          <img src="./images/NA MU.png" alt="logo">
-        </div>
-        <div class="menu__close menu__header-close">
-          <a href="#" class="menu__close-button">X</a>
-        </div>
-
-      </div>
-      <div class="menu__button">
-        <label
-          for="email">
-        </label>
-        <input
-          type="email"
-          placeholder="E-mail"
-          name="email"
-          class="menu__button-text">
-        <a class="menu__button-search">></a>
-      </div>
-
-      <div class="hero__button">
-        <div class="hero__button--item">
-          кивтки
-        </div>
-        <a href="#" class="hero__button--search">
-          >
-        </a>
-      </div>
-      <div class="menu__footer">
-        <div class="grid">
-          <div class="grid__item grid__item--1">
-            <div class="footer__logo">
-              <img
-                src="./images/logo_footer.png"
-                alt="logo"
-                class="footer__logo-pic">
-              <div class="footer__logo--links">
-                <a href="https://www.facebook.com/namu.museum/" class="footer__logo-link">
-                  <img
-                    src="./images/Facebook.png"
-                    alt="facebook_link"
-                    >
-                </a>
-                <a href="https://www.instagram.com/namu.museum/">
-                  <img
-                    src="./images/insta.png"
-                    alt="instagram_link"
-                    >
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="grid__item grid__item--3-4">
-            <div class="footer_schedule">
-              <div class="footer_schedule-times">
-                <h3>Графік роботи</h3>
-                <div>
-                  <div>
-                    12:00 — 20:00
-                  </div>
-                  <div>
-                    середа
-                  </div>
-                  <div>
-                    12:00 — 20:00
-                  </div>
-                  <div>
-                    четвер
-                  </div>
-                  <div>
-                    12:00 — 20:00
-                  </div>
-                  <div>
-                    п’ятниця
-                  </div>
-                  <div>
-                    11:00 — 19:00
-                  </div>
-                  <div>
-                    субота
-                  </div>
-                  <div>
-                    11:00 — 19:00
-                  </div>
-                  <div>
-                    неділя
-                  </div>
-                  <div>
-                    Вихідні понеділок, вівторок
-                    <br>
-                    Kaca припиняє роботу за 1 годину
-                    <br>
-                    до закриття музею
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid__item grid__item--5-6">
-            <div class="footer__schedule-contacts">
-              <h3>Контакти:</h3>
-              <div>
-                <a href="https://goo.gl/maps/7nr8PqBr3HogmNBo8" class="footer__schedule-link">
-                  вул. M. Грушевського, 6; Київ, 01001
-                </a>
-                <a href="tel:+38 (044) 278-13-57" class="footer__schedule-link">
-                  тел. +38 (044) 278-13-57
-                </a>
-                <a href="fax:+38 (044) 278-74-54" class="footer__schedule-link">
-                  факс +38 (044) 278-74-54
-                </a>
-                <a href="mailto:info@namu.kiev.ua" class="footer__schedule-link">
-                  e-mail: info@namu.kiev.ua
-                </a>
-              </div>
-            </div>
-          </div>
-          <div>
+      <div class="menu--container">
+        <div class="menu__content">
+          <a href="#">
             <img
-              src="./images/footer_line_hor.png"
-              alt="line"
-              class="footer__line-desktop">
-          </div>
-          <div>
-            <img
-              src="./images/footer_line_ver.png"
-              alt="line"
-              class="footer__line-mobile">
-          </div>
-          <div>
-            <a href="#">
-              <img
-              src="./images/Ellipse.png"
-              alt="go_to_the_top"
-              class="footer__return">
+              src="./images/NA MU.png"
+              alt="logo"
+              class="menu__logo">
+          </a>
+          <a href="#" class="menu__close">
+            X
+          </a>
+        </div>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#exhibition" class="menu__item-a">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#gallery" class="menu__item-a">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#lecture" class="menu__item-a">Про Hac</a>
+          </li>
+          <li class="menu__item">
+            <a href="#footer" class="menu__item-a">
+              Контакти
             </a>
-          </div>
-          <div class="grid__item grid__item--8-10">
-            <div class="footer__nav">
-              <div>
-                <a href="#gallery" class="footer__nav-link">
-                  Галерея
-                </a>
-              </div>
-              <div>
-                <a href="#" class="footer__nav-link">
-                  Про Hac
-                </a>
-              </div>
-              <div>
-                <a href="#exhibition" class="footer__nav-link">
-                  Виставки та події
-                </a>
-              </div>
-              <div class="footer__nav-link">
-                Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-->
-              </div>
-            </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
-
     </nav>
 
     <main>
@@ -229,7 +98,9 @@
         </div>
       </div>
 
-      <section class="page__section page__section-exhibition">
+      <section
+        class="page__section
+        page__section-exhibition">
         <div class="grid">
           <div class="grid__item grid__item--1-4">
             <h2 class="page__section-title" id="exhibition">
@@ -243,18 +114,20 @@
               class="page__section-painting">
           </div>
           <div class="grid__item grid__item--9-12">
-            <div class="page__section-description">
-              ВИСТАВКА
-            </div>
-            <div class="page__section-date">
-              26.08-29.11.2019
-            </div>
-            <div class="page__section-name">
-              Йду i повертаюсь
-              <img src="./images/orange.png" alt="ornge_square">
-            </div>
-            <div class="page__section-content">
-              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            <div class="page__section--container">
+              <div class="page__section-description">
+                ВИСТАВКА
+              </div>
+              <div class="page__section-date">
+                26.08-29.11.2019
+              </div>
+              <div class="page__section-name">
+                Йду i повертаюсь
+                <img src="./images/orange.png" alt="ornge_square">
+              </div>
+              <div class="page__section-content">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
             </div>
           </div>
 
@@ -265,18 +138,20 @@
               class="page__section-painting">
           </div>
           <div class="grid__item grid__item--9-12">
-            <div class="page__section-description">
-              ВИСТАВКА
-            </div>
-            <div class="page__section-date">
-              26.08-29.11.2019
-            </div>
-            <div class="page__section-name">
-              I спогади i мрії
-              <img src="./images/orange.png" alt="ornge_square">
-            </div>
-            <div class="page__section-content">
-              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+            <div class="page__section--container">
+              <div class="page__section-description">
+                ВИСТАВКА
+              </div>
+              <div class="page__section-date">
+                26.08-29.11.2019
+              </div>
+              <div class="page__section-name">
+                I спогади i мрії
+                <img src="./images/orange.png" alt="ornge_square">
+              </div>
+              <div class="page__section-content">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+              </div>
             </div>
           </div>
         </div>
@@ -286,7 +161,7 @@
         <div class="grid">
           <div class="grid__item grid__item--4-9">
             <div class="page__section-announcement">
-              <div class="page__section-description">
+              <div class="page__section-description" id="lectute">
                 ЛЕКЦІЯ
               </div>
               <div class="page__section-date">26/08/2019 - 11:00</div>
@@ -383,20 +258,23 @@
         </div>
         <div class="grid__item grid__item--4-9">
           <div class="subscribe__button">
-            <label
-              for="email">
-            </label>
-            <input
-              type="email"
-              placeholder="E-mail"
-              name="email"
-              class="subscribe__button-text">
-            <a class="subscribe__button-search">></a>
+            <form action="/" class="subscribe__form">
+              <label
+                for="email">
+              </label>
+              <input
+                type="email"
+                placeholder="E-mail"
+                name="email"
+                class="subscribe__button-text"
+                required>
+              <a class="subscribe__button-search">></a>
+            </form>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!--<footer class="footer" id="#footer">
       <div class="grid">
         <div class="grid__item grid__item--1">
           <div class="footer__logo">
@@ -405,17 +283,19 @@
               alt="logo"
               class="footer__logo-pic">
             <div class="footer__logo--links">
-              <a href="https://www.facebook.com/namu.museum/" class="footer__logo-link">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__logo-link"
+                target="_blank">
                 <img
                   src="./images/Facebook.png"
                   alt="facebook_link"
                   >
               </a>
-              <a href="https://www.instagram.com/namu.museum/">
+              <a href="https://www.instagram.com/namu.museum/" target="_blank">
                 <img
                   src="./images/insta.png"
-                  alt="instagram_link"
-                  >
+                  alt="instagram_link">
               </a>
             </div>
           </div>
@@ -523,11 +403,139 @@
               </a>
             </div>
             <div class="footer__link">
-              Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-->
+              Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </footer>-->
+    <div class="container grid">
+      <div
+        class="
+          footer
+          page__footer
+          page__section"
+        id="contacts">
+        <div class="footer__content">
+          <div class="footer__logo-wrapper">
+            <a href="#" class="footer__logo">
+              <img
+                src="./images/NA MU.png"
+                alt="logo"
+                class="footer__logo-pic"
+              >
+            </a>
+
+            <div class="footer__icon-wrapper">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__icon"
+                target="_blank"
+              >
+                <img
+                  src="./images/Facebook.png"
+                  alt="Facebook" class="footer__icon-pic"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__icon"
+                target="_blank"
+              >
+                <img
+                  src="./images/insta.png"
+                  alt="Instagram" class="footer__icon-pic"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule-wrapper">
+            <div class="footer__schedule grid__item grid__item--3-4">
+              <p class="footer__schedule-title">Графік роботи</p>
+              <div class="footer__schedule-content">
+                <div class="footer__schedule-slot">
+                  <p class="footer__schedule-time">12:00 — 20:00</p>
+                  <p class="footer__schedule-day">середа</p>
+                </div>
+                <div class="footer__schedule-slot">
+                  <p class="footer__schedule-time">12:00 — 20:00</p>
+                  <p class="footer__schedule-day">четвер</p>
+                </div>
+                <div class="footer__schedule-slot">
+                  <p class="footer__schedule-time">12:00 — 20:00</p>
+                  <p class="footer__schedule-day">пʼятниця</p>
+                </div>
+                <div class="footer__schedule-slot">
+                  <p class="footer__schedule-time">11:00 — 19:00</p>
+                  <p class="footer__schedule-day">субота</p>
+                </div>
+                <div class="footer__schedule-slot">
+                  <p class="footer__schedule-time">11:00 — 19:00</p>
+                  <p class="footer__schedule-day">неділя</p>
+                </div>
+                <div class="footer__schedule-slot footer__text-slot--last">
+                  <p class="footer__schedule-time">Вихідні:</p>
+                  <p class="footer__schedule-day">понеділок, вівторок</p>
+                </div>
+
+                <p class="footer__schedule-day"> Kaca припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__schedule">
+              <p class="footer__schedule-title">Контакти:</p>
+              <div class="footer__schedule-content">
+                <p class="footer__schedule-day">вул. M. Грушевського, 6; Київ, 01001</p>
+                <p class="footer__schedule-day">тел. +38 (044) 278-13-57</p>
+                <p class="footer__schedule-day"> факс +38 (044) 278-74-54</p>
+                <p class="footer__schedule-day">e-mail: info@namu.kiev.ua</p>
+              </div>
+            </div>
+          </div>
+
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <div class="footer__nav-wrapper">
+                <li class="footer__nav-item">
+                  <a href="#gallery" class="footer__nav-link">
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="footer__nav-item">
+                  <a href="#exhibition" class="footer__nav-link">
+                    Виставки та події
+                  </a>
+                </li>
+              </div>
+            </ul>
+            <ul class="footer__nav-list footer__nav-list--second">
+              <div class="footer__nav-wrapper">
+                <li class="footer__nav-item">
+                  <a href="#top" class="footer__nav-link">
+                    Про нас
+                  </a>
+                </li>
+
+                <li class="footer__nav-item">
+                  <a href="#contacts" class="footer__nav-link">
+                    Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+
+          <div class="footer__go-top">
+            <a href="#top" class="footer__go-top-link">↑</a>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
