--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/icons/NA MU.svg"
+    >
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;
+    400;300;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -167,7 +173,11 @@
                 </div>
 
                 <h3 class="event__title">
-                  <a href="#" class="event__link event__link--exhibition">
+                  <a
+                    href="#"
+                    class="event__link event__link--exhibition"
+                    target="_blank"
+                  >
                     I спогади i мрії
                   </a>
                 </h3>
@@ -280,20 +290,27 @@
         <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
         <div class="subscription__input">
-          <form action="/" class="subscription__form">
+          <form
+            action="."
+            class="subscription__form"
+            id="form"
+            >
             <input
               class="subscription__email"
-              type="text"
-              name="text"
+              type="email"
+              name="email"
               id="email"
               placeholder="E-mail"
+              required
             >
-            <button type="submit" class="subscription__icon">
+            <button class="subscription__icon" href="#email">
               <img
                 class="subscription__icon-pic"
                 src="/images/icons/go.svg"
-                alt="go">
+                alt="go"
+              >
             </button>
+            <div id="output-box" class="subscription_att-warning"></div>
           </form>
         </div>
       </div>
@@ -319,11 +336,13 @@
                     <a
                     class="media__link"
                     href="https://www.facebook.com/namu.museum/photos/"
+                    target="_blank"
                   >
                       <img
                         class="media__img"
                         src="/images/icons/Facebook.svg"
                         alt="facebook"
+
                       >
                     </a>
                   </li>
@@ -332,6 +351,7 @@
                     <a
                     class="media__link"
                     href="https://www.instagram.com/namu.museum/"
+                    target="_blank"
                   >
                       <img
                         class="media__img"
