add menu + galery

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU. National Art Museum of Ukraine</title>
+    <link rel="icon"
+      type="image/x-icon"
+      href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
 
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 
   </head>
 
@@ -36,7 +39,11 @@
             КВИТКИ
           </div>
           <div class="ticket__button">
-            <img src="./images/arrow-button.svg" alt="ticket-button">
+            <a href="#">
+              <img src="./images/arrow-button.svg"
+                alt="ticket-button"
+                class="ticket__button-link">
+            </a>
           </div>
         </div>
 
@@ -61,6 +68,53 @@
       </div>
 
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+
+          <div class="menu__top-actions">
+            <a href="#" class="menu__cross">
+              <img src="./images/cross.svg"
+              alt="cross"
+              class="menu__cross-icon"
+            >
+            </a>
+            <a href="#"
+              class="logo logo--menu"
+            >
+              <img src="./images/logo.svg"
+              class="logo__img"
+              alt="logo"
+            >
+            </a>
+
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Актуальні події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#galery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#sign-up" class="menu__link">Підписка</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a href="tel:+38 (044) 278-13-57" class="menu__call menu__call--phone">
+            Зателефонуйте нам
+          </a>
+          <a href="tel:+38 (044) 278-13-57" class="menu__call menu__call--action">
+            +38 (044) 278-13-57
+          </a>
+        </div>
+      </div>
+    </nav>
+
 
     <main>
 
@@ -142,8 +196,86 @@
         </div>
       </section>
 
-      <section class="page__section" id="gallery">
+      <section class="page__section" id="galery">
+        <div class="container">
+          <h2 class="page__section-title">Галерея</h2>
 
+          <!-- Slider  -->
+          <div class="swiper slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper ">
+              <!-- Slides -->
+              <div class="swiper-slide slider__slide">
+                <img src="images/Rectangle13.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="swiper-slide slider__slide ">
+                <img src="images/Rectangle 24.1.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="swiper-slide slider__slide">
+                <img src="images/Rectangle 3.1.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="swiper-slide slider__slide">
+                <img src="images/Rectangle 13.4.png"
+                  alt="photo"
+                  class="slider__img"
+                >
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="slider__btn swiper-button-prev "></div>
+            <div class="slider__btn swiper-button-next "></div>
+          </div>
+
+          <!-- galery -->
+          <div class="galery">
+            <div class="galery__pictures">
+
+              <div class="galery__first-picture">
+                <img src="images/Rectangle13.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+              <div class="galery__second-picture">
+                <img src="images/Rectangle 3.1.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+            </div>
+            <div class="galery__pictures">
+              <div class="galery__three-picture">
+                <img src="images/Rectangle 13.3.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+
+              <div class="galery__four-picture">
+                <img src="images/Rectangle 13.4.png"
+                  alt="photo"
+                  class="galery__img"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -157,7 +289,10 @@
         </p>
 
         <div class="sign-up__input">
-          <form action="#" class="sign-up__form">
+          <form action="#"
+            class="sign-up__form"
+            method="get"
+          >
             <label for="email">
               <input
                 type="email"
@@ -183,13 +318,14 @@
         <section class="footer">
 
           <div class="footer__links-block">
-            <a href="https://goo.gl/maps/Q3KLWrF6TX255TT39" class="footer__logo">
+            <a href="#" class="footer__logo">
               <img src="./images/logo.svg" alt="logo">
             </a>
 
             <div class="footer__logos">
               <a href="https://www.facebook.com/namu.museum/"
                 class="footer__logo"
+                target="_blank"
               >
                 <img src="./images/Facebook.svg"
                   alt="Facebook"
@@ -197,10 +333,14 @@
                   >
               </a>
 
-              <a href="https://www.instagram.com/namu.museum/" class="footer__instagram">
+              <a href="https://www.instagram.com/namu.museum/"
+                class="footer__instagram"
+                target="_blank"
+              >
                 <img src="./images/instagram.svg"
                 alt="instagram"
-                class="footer__img">
+                class="footer__img"
+                >
               </a>
             </div>
           </div>
@@ -226,7 +366,10 @@
             <p>Контакти:</p>
 
             <div class="footer__contacts-content">
-              <a href="https://goo.gl/maps/4wtr4Bjvh9mVvYeD7" class="footer__link">
+              <a href="https://goo.gl/maps/4wtr4Bjvh9mVvYeD7"
+                class="footer__link"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
               <br>
