--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,8 @@
 
     <main>
       <div class="hero">
-        <div class="grid">
-          <div class="grid__item grid__item--desktop-1-5">
+        <div class="d">
+          <div class="5">
             <h2 class="hero__title">
               ХУДОЖНІЙ
               <br>
@@ -274,14 +274,16 @@
         </div>
       </section>
     </main>
-    <!--<footer class="footer" id="#footer">
+    <footer class="footer" id="#footer">
       <div class="grid">
         <div class="grid__item grid__item--1">
           <div class="footer__logo">
-            <img
+            <a href="#">
+              <img
               src="./images/logo_footer.png"
               alt="logo"
               class="footer__logo-pic">
+            </a>
             <div class="footer__logo--links">
               <a
                 href="https://www.facebook.com/namu.museum/"
@@ -302,41 +304,41 @@
         </div>
         <div class="grid__item grid__item--3-4">
           <div class="footer_schedule">
-            <div class="footer_schedule-times">
+            <div class="footer_schedule--time">
               <h3>Графік роботи</h3>
               <div>
-                <div>
+                <div class="footer__schedule-hours">
                   12:00 — 20:00
                 </div>
                 <div>
                   середа
                 </div>
-                <div>
+                <div class="footer__schedule-hours">
                   12:00 — 20:00
                 </div>
                 <div>
                   четвер
                 </div>
-                <div>
+                <div class="footer__schedule-hours">
                   12:00 — 20:00
                 </div>
                 <div>
                   п’ятниця
                 </div>
-                <div>
+                <div class="footer__schedule-hours">
                   11:00 — 19:00
                 </div>
                 <div>
                   субота
                 </div>
-                <div>
+                <div class="footer__schedule-hours">
                   11:00 — 19:00
                 </div>
                 <div>
                   неділя
                 </div>
-                <div>
-                  Вихідні понеділок, вівторок
+                <div  class="footer__schedule-off">
+                  <span class="bold">Вихідні:</span> понеділок, вівторок
                   <br>
                   Kaca припиняє роботу за 1 годину
                   <br>
@@ -403,21 +405,21 @@
               </a>
             </div>
             <div class="footer__link">
-              Контакти <!--i am not sure where this link is supposed to go because contacts are already in the footer-
+              Контакти
             </div>
           </div>
         </div>
       </div>
-    </footer>-->
-    <div class="container grid">
+    </footer>
+    <!--<div class="container grid">
       <div
         class="
           footer
           page__footer
           page__section"
         id="contacts">
-        <div class="footer__content">
-          <div class="footer__logo-wrapper">
+        <div class="footer__content grid">
+          <div class="footer__logo-wrapper grid__item--1-2">
             <a href="#" class="footer__logo">
               <img
                 src="./images/NA MU.png"
@@ -451,47 +453,47 @@
             </div>
           </div>
 
-          <div class="footer__schedule-wrapper">
+          <div class="footer__schedule-wrapper grid">
             <div class="footer__schedule grid__item grid__item--3-4">
-              <p class="footer__schedule-title">Графік роботи</p>
+              <h3 class="footer__schedule-title">Графік роботи</h3>
               <div class="footer__schedule-content">
                 <div class="footer__schedule-slot">
-                  <p class="footer__schedule-time">12:00 — 20:00</p>
-                  <p class="footer__schedule-day">середа</p>
+                  <div class="footer__schedule-time">12:00 — 20:00</div>
+                  <div class="footer__schedule-day">середа</div>
                 </div>
                 <div class="footer__schedule-slot">
-                  <p class="footer__schedule-time">12:00 — 20:00</p>
-                  <p class="footer__schedule-day">четвер</p>
+                  <div class="footer__schedule-time">12:00 — 20:00</div>
+                  <div class="footer__schedule-day">четвер</div>
                 </div>
                 <div class="footer__schedule-slot">
-                  <p class="footer__schedule-time">12:00 — 20:00</p>
-                  <p class="footer__schedule-day">пʼятниця</p>
+                  <div class="footer__schedule-time">12:00 — 20:00</div>
+                  <div class="footer__schedule-day">пʼятниця</div>
                 </div>
                 <div class="footer__schedule-slot">
-                  <p class="footer__schedule-time">11:00 — 19:00</p>
-                  <p class="footer__schedule-day">субота</p>
+                  <div class="footer__schedule-time">11:00 — 19:00</div>
+                  <div class="footer__schedule-day">субота</div>
                 </div>
                 <div class="footer__schedule-slot">
-                  <p class="footer__schedule-time">11:00 — 19:00</p>
-                  <p class="footer__schedule-day">неділя</p>
+                  <div class="footer__schedule-time">11:00 — 19:00</div>
+                  <div class="footer__schedule-day">неділя</div>
                 </div>
                 <div class="footer__schedule-slot footer__text-slot--last">
-                  <p class="footer__schedule-time">Вихідні:</p>
-                  <p class="footer__schedule-day">понеділок, вівторок</p>
+                  <div class="footer__schedule-time">Вихідні:</div>
+                  <div class="footer__schedule-day">понеділок, вівторок</div>
                 </div>
 
-                <p class="footer__schedule-day"> Kaca припиняє роботу за 1 годину до закриття музею
-                </p>
+                <div class="footer__schedule-day"> Kaca припиняє роботу за 1 годину до закриття музею
+                </div>
               </div>
             </div>
 
-            <div class="footer__schedule">
-              <p class="footer__schedule-title">Контакти:</p>
-              <div class="footer__schedule-content">
-                <p class="footer__schedule-day">вул. M. Грушевського, 6; Київ, 01001</p>
-                <p class="footer__schedule-day">тел. +38 (044) 278-13-57</p>
-                <p class="footer__schedule-day"> факс +38 (044) 278-74-54</p>
-                <p class="footer__schedule-day">e-mail: info@namu.kiev.ua</p>
+            <div class="footer__contacts">
+              <p class="footer__contscts-title">Контакти:</p>
+              <div class="footer__contacts-content">
+                <p class="footer__contacts-day">вул. M. Грушевського, 6; Київ, 01001</p>
+                <p class="footer__contacts-day">тел. +38 (044) 278-13-57</p>
+                <p class="footer__contacts-day"> факс +38 (044) 278-74-54</p>
+                <p class="footer__contacts-day">e-mail: info@namu.kiev.ua</p>
               </div>
             </div>
           </div>
@@ -536,6 +538,6 @@
 
         </div>
       </div>
-    </div>
+    </div>-->
   </body>
 </html>
