--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,31 @@
     </script>
   </head>
   <body>
+    <div class="hero">
+      <div class="grid">
+        <div class="grid__item grid__item--desktop-1-5">
+          <h2 class="hero__title">
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h2>
+          <div class="hero__button">
+            <div class="hero__button--item">
+              кивтки
+            </div>
+            <a href="#" class="hero__button--search">
+              >
+            </a>
+          </div>
+        </div>
+        <div class="grid__item grid__item--desktop-6-12">
+          <img
+            src="./images/background.png"
+            alt="backg"
+            class="hero__background">
+        </div>
+      </div>
+    </div>
     <header class="header header--desktop">
       <div class="container">
 
@@ -72,31 +97,7 @@
     </nav>
 
     <main>
-      <div class="hero">
-        <div class="d">
-          <div class="5">
-            <h2 class="hero__title">
-              ХУДОЖНІЙ
-              <br>
-              МУЗЕЙ
-            </h2>
-            <div class="hero__button">
-              <div class="hero__button--item">
-                кивтки
-              </div>
-              <a href="#" class="hero__button--search">
-                >
-              </a>
-            </div>
-          </div>
-          <div class="grid__item grid__item--desktop-6-12">
-            <img
-              src="./images/background.png"
-              alt="backg"
-              class="hero__background">
-          </div>
-        </div>
-      </div>
+
 
       <section
         class="page__section
